# mergelore

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  action.yml
.claude/: settings.json
.claude/agents/: recall-check.md
.claude/commands/: recall-index.md  recall.md
.claude/skills/: provider-pattern.md  testing-strategy.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dogfood.yml  index.yml  keepalive.yml  release.yml
action/: Dockerfile  action.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
action/src/: comment.ts  config.ts  diff.ts  index.ts  logger.ts  types.ts
action/src/handlers/: slash-commands.ts
action/src/providers/llm/: claude.ts  factory.ts  openai.ts  prompts.ts
action/tests/unit/: comment.test.ts  config.test.ts  diff.test.ts  slash-commands.test.ts
docs/: CONTEXT.md  REQUIREMENTS.md
indexer/: Dockerfile  action.yml  pyproject.toml
indexer/src/mergelore_indexer/: chunk.py  config.py  extract.py  main.py  metrics.py  retry.py
indexer/src/mergelore_indexer/embed/: cohere_embed.py  factory.py  fastembed_embed.py  interface.py  nomic.py  openai_embed.py
indexer/src/mergelore_indexer/store/: interface.py  qdrant_store.py
indexer/tests/: test_chunk.py  test_config.py  test_e2e_local.py  test_embed_factory.py  test_retry.py
samples/: block-on-critical.yml  openai-provider.yml  tier0-no-memory.yml  tier1-git-native.yml  tier2-qdrant-index.yml  tier2-qdrant-review.yml
(+9 files in other folders)
